error.txt
(intel_cantera) [jsampayan4914@cpu038 reactorode_isat_nn]$ ./build.sh 
./build.sh: line 1: ﻿#!/bin/bash: No such file or directory
icpx: warning: -lcantera: 'linker' input unused [-Wunused-command-line-argument]
icpx: warning: argument unused during compilation: '-L/home/jsampayan4914/miniconda3/envs/intel_cantera/lib' [-Wunused-command-line-argument]
reactor.cpp:419:24: error: no matching function for call to 'newIntegrator'
  419 |         auto sensInt = newIntegrator("CVODE", odes_current);
      |                        ^~~~~~~~~~~~~
/home/jsampayan4914/miniconda3/envs/intel_cantera/include/cantera/numerics/Integrator.h:317:13: note: candidate function not viable: requires single argument 'itype', but 2 arguments were provided
  317 | Integrator* newIntegrator(const string& itype);
      |             ^             ~~~~~~~~~~~~~~~~~~~
1 error generated.
ifx: error #10236: File not found: 'reactor.o'
(intel_cantera) [jsampayan4914@cpu038 reactorode_isat_nn]$ ls
